# rust-web

./: .gitignore  Cargo.toml  LOGGING.md  MODULES.md  PERFORMANCE.md  QUICKSTART.md  README.md  VSCODE_SETUP.md  benchmark.sh  build_release.sh  config.example.json  show_threads.sh  test_api.sh
.cargo/: config.toml
src/: app_context.rs  lib.rs  main.rs  server.rs
src/config/: types.rs
src/observability/: logging.rs
