[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "ws", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snap = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Release 优化配置 - 生产环境性能提升 2-10 倍
[profile.release]
opt-level = 3              # 最高优化级别
lto = "thin"              # Link Time Optimization (thin 比 fat 快)
codegen-units = 1         # 单个代码生成单元，最大化优化
strip = true              # 移除调试符号，减小二进制大小
panic = "abort"           # panic 时直接 abort，无需展开栈


